--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
     <script src="script.js"></script>
-    <title>Document</title>
+    <title>Jogo Pong</title>
 </head>
 <body>
+    
+    <script src="script.js"></script>
     
 </body>
 </html>
