--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
     <title>Jogo Pong</title>
 </head>
 <body>
-    
+    <header>JOGO PONG</header>
+
+
+    <div>
+    <h1>jogo desenvolvido no colegio Chiarelli</h1>
+    <p>#jogo-pong</p>
+    </div>
+
+
+    <div
     <script src="script.js"></script>
-    
+    </div>
+
 </body>
 </html>
