--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
 
         canvas {
             display: block;
+            margin-bottom: 20px; /* Garantir que os botões fiquem abaixo do jogo */
         }
 
         .controls {
-            margin-top: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         .controls button {
@@ -50,7 +53,7 @@
     <h1>Jogo desenvolvido no colégio Chiarelli</h1>
     <p>#jogo-pong</p>
     <div class="controls">
-        <button id="upBtn">Cima</button><br>
+        <button id="upBtn">Cima</button>
         <button id="downBtn">Baixo</button>
     </div>
 </body>
