--- a/index.html
+++ b/index.html
@@ -4,47 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <title>Jogo Pong</title>
     <style>
         body {
             display: flex;
             flex-direction: column;
-            align-items: center;
             justify-content: center;
-            height: 100vh;
-            margin: 0;
+            align-items: center;
             background-color: #333;
             color: white;
+            margin: 0;
+            height: 100vh;
         }
-
-        header, h1, p {
-            text-align: center;
+        header {
+            font-size: 2em;
+            margin-bottom: 20px;
         }
-
         canvas {
             display: block;
-            margin-bottom: 20px; /* Garantir que os botões fiquem abaixo do jogo */
         }
-
-        .controls {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
+        #controls {
+            margin-top: 10px;
+            background-color: #555;
+            padding: 20px;
+            border-radius: 10px;
         }
-
-        .controls button {
-            background-color: green;
-            color: white;
-            padding: 15px;
+        button {
+            width: 100px;
+            height: 50px;
             margin: 10px;
+            font-size: 20px;
+            background-color: #4CAF50;
+            color: white;
             border: none;
+            border-radius: 5px;
             cursor: pointer;
-            font-size: 18px;
         }
-
-        .controls button:active {
-            background-color: darkgreen;
+        button:active {
+            background-color: #45a049;
         }
     </style>
 </head>
@@ -52,9 +50,10 @@
     <header>JOGO PONG</header>
     <h1>Jogo desenvolvido no colégio Chiarelli</h1>
     <p>#jogo-pong</p>
-    <div class="controls">
-        <button id="upBtn">Cima</button>
-        <button id="downBtn">Baixo</button>
+
+    <div id="controls">
+        <button id="btnUp">Cima</button><br>
+        <button id="btnDown">Baixo</button>
     </div>
 </body>
 </html>
